src/components/ImageContainer.scss
@import "../styles/base-includes";

.reactBasicTemplateEditor-ImageContainer {
  padding: 0 1em;
}

.reactBasicTemplateEditor-ImageContainer-imageListItem {
  @extend %base-container-styles;
  @include clearfix;
  background-color: rgba(150,150,150,0.5);
  padding: 10px;
  margin: 10px 0;
  display: flex;
  align-items: stretch;
  justify-content: space-between;
}

.reactBasicTemplateEditor-ImageContainer-imageListItemDragHandle {
  cursor: move;
  display: flex;
  flex-direction: column;
  justify-content: center;

  > div {
    width: 1.5em;
    height: 5px;
    background-color: rgba(0,0,0,0.2);
    border: 1px solid rgba(255,255,255, 0.6);
    border-left: none;
    border-top: none;
    margin: 2px;
  }
}

.reactBasicTemplateEditor-ImageContainer-modalCancel {
  @extend %button;
  float: right;
}

.reactBasicTemplateEditor-ImageContainer-imageListItemChangeButton {
  font-size: 0.75em;
  @extend %button;
  padding: 0.35em 0.5em;
}

.reactBasicTemplateEditor-ImageContainer-imageListItemDataChangers {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.reactBasicTemplateEditor-ImageContainer-explainer {
  @extend %explanation-text;
}

